# requete

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPECIFICATION.md  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: ci.yaml  ci.yml  publish.yaml  publish.yml
requete/: __init__.py  nodes.py  sessions.py  tests.py
